--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="trimmer">Trimmer</li>
+		<li data-ns-test="Shoes">Shoes</li>
+		<li data-ns-test="Clothes">Clothes</li>
+	</ol>
+
+		<ul>
+		<li data-ns-test="trimmer">Bali</li>
+		<li data-ns-test="Shoes">Iceland</li>
+		<li data-ns-test="Clothes">UK</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
