--- a/main.html
+++ b/main.html
@@ -9,15 +9,15 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li data-ns-test="trimmer">Trimmer</li>
-		<li data-ns-test="Shoes">Shoes</li>
-		<li data-ns-test="Clothes">Clothes</li>
+		<li data-ns-test="shoppingList">Trimmer</li>
+		<li data-ns-test="shoppingList">Shoes</li>
+		<li data-ns-test="shoppingList">Clothes</li>
 	</ol>
 
 		<ul>
-		<li data-ns-test="trimmer">Bali</li>
-		<li data-ns-test="Shoes">Iceland</li>
-		<li data-ns-test="Clothes">UK</li>
+		<li data-ns-test="holidayList">Bali</li>
+		<li data-ns-test="holidayList">Iceland</li>
+		<li data-ns-test="holidayList">UK</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
